--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>LIL PALL</title>
 </head>
 <body>
-    
+    <section class="hero-section">
+
+
+        <div class="header">
+
+            <div class="left-side">
+                <img src="img/litl-pal-logo.png" alt="">
+                <div  class ="social-icons">
+
+                </div>
+            </div>
+
+            <div class="right-side"></div>
+
+            <div class="hero-content"></div>
+
+        </div>
+       
+    </section>
 </body>
 </html>
