--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
                 </div>
             </div>
 
-            <div class="right-side"></div>
-
-            <div class="hero-content"></div>
+            <div class="right-side">
+                
+            </div>
 
         </div>
+
+         <div class="hero-content"></div>
+
        
     </section>
 </body>
