added media icons to the right side

--- a/index.html
+++ b/index.html
@@ -15,11 +15,37 @@
             <div class="left-side">
                 <img src="img/litl-pal-logo.png" alt="">
                 <div  class ="social-icons">
+                    <img src="img/x icon.png" alt="">
+                    <img src="img/insta icon.png" alt="">
+                    <img src="img/yt icon.png" alt="">
 
                 </div>
             </div>
 
             <div class="right-side">
+                <li>
+                    <a href="">adopt a pet</a>
+
+                </li>
+                <li>
+                    <a href="">pages</a>
+                </li>
+                <li>
+                    <a href="">post layout</a>
+
+                </li>
+                <li>
+                    <a href="">post features</a>
+                </li>
+                <li>
+                    <a href="">news</a>
+                </li>
+                <li>
+                    <a href="">events</a>
+                </li>
+                <li>
+                    <a href="">purchase</a>  
+                </li>
                 
             </div>
 
