--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                         <a href="">purchase</a>
                     </li>
                 </ul>
+                <button>DONATE</button>
+
 
             </div>
 
