finished donate button

--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
                         <a href="">purchase</a>
                     </li>
                 </ul>
-                <button>DONATE</button>
-
-
             </div>
+            <button class="btn-primary">donate</button>
+        </div>
 
         </div>
 
