added more to html

--- a/index.html
+++ b/index.html
@@ -27,36 +27,51 @@
             <div class="right-side">
                 <ul>
                     <li>
-                        <a href="">adopt a pet</a>
+                        <a href="">Adopt a pet</a>
 
                     </li>
                     <li>
-                        <a href="">pages</a>
+                        <a href="">Pages</a>
                     </li>
                     <li>
-                        <a href="">post layout</a>
+                        <a href="">Post layout</a>
 
                     </li>
                     <li>
-                        <a href="">post features</a>
+                        <a href="">Post features</a>
                     </li>
                     <li>
-                        <a href="">news</a>
+                        <a href="">News</a>
                     </li>
                     <li>
-                        <a href="">events</a>
+                        <a href="">Events</a>
                     </li>
                     <li>
-                        <a href="">purchase</a>
+                        <a href="">Purchase</a>
                     </li>
+
                 </ul>
+                 <button class="btn-primary">Donate</button>
             </div>
-            <button class="btn-primary">donate</button>
+
         </div>
 
         </div>
 
         <div class="hero-content"></div>
+        <div class="hero-content-left">
+            <h2>What!?</h2>
+            <p>A new furry friend for free??</p>
+            <div class="hero-content-left-button">
+                <button class="btn-primary">Learn more</button>
+                <p>or</p>
+                <button class="btn-primary-outline">Choose new friend</button>
+
+        </div>
+        </div>
+
+        <div class="hero-content-right">
+            <img src="img/dog image 2.jpg" alt="">
 
 
     </section>
