corrected div closing tags

--- a/index.html
+++ b/index.html
@@ -51,29 +51,29 @@
                     </li>
 
                 </ul>
-                 <button class="btn-primary">Donate</button>
+                <button class="btn-primary">Donate</button>
             </div>
 
         </div>
 
         </div>
 
-        <div class="hero-content"></div>
-        <div class="hero-content-left">
-            <h2>What!?</h2>
-            <p>A new furry friend for free??</p>
-            <div class="hero-content-left-button">
-                <button class="btn-primary">Learn more</button>
-                <p>or</p>
-                <button class="btn-primary-outline">Choose new friend</button>
+        <div class="hero-content">
+            <div class="hero-content-left">
+                <h2>What!?</h2>
+                <p>A new furry friend for free??</p>
+                <div class="hero-content-left-button">
+                    <button class="btn-primary">Learn more</button>
+                    <p>or</p>
+                    <button class="btn-primary-outline">Choose new friend</button>
 
+                </div>
+            </div>
+
+            <div class="hero-content-right">
+                <img src="img/dog image 2.jpg" alt="">
+            </div>
         </div>
-        </div>
-
-        <div class="hero-content-right">
-            <img src="img/dog image 2.jpg" alt="">
-
-
     </section>
 </body>
 
