--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="hero-content-right">
-                <img src="img/dog image 2.jpg" alt="">
+                <img src="c:\Users\RUQS\Downloads\dogggyy-Photoroom.png" alt="">
             </div>
         </div>
     </section>
